<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewBusao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="34sp"
            android:paddingBottom="34sp"
            android:text="Escolha a data desejada"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btn_cardapio"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="Escolher data"
            android:textColor="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_food"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:gravity="center"
                            android:id="@+id/dia_da_semana"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Dia da semana"
                            android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>

                        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:stretchColumns="1">
                            <TableRow>

                                <TextView
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="8dp"
                                    android:text="Almoço"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>/>
                                <TextView
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="16dp"
                                    android:text="Janta"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>/>

                            </TableRow>

                            <TableRow>
                                <TextView
                                    android:id="@+id/a1"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="8dp"
                                    android:text="@string/valor_cardapio_a1"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                                <TextView
                                    android:id="@+id/j1"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="16dp"
                                    android:text="@string/valor_cardapio_j1"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                            </TableRow>

                            <TableRow>
                                <TextView
                                    android:id="@+id/a2"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="8dp"
                                    android:text="@string/valor_cardapio_a2"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                                <TextView
                                    android:id="@+id/j2"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="16dp"
                                    android:text="@string/valor_cardapio_j2"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                            </TableRow>

                            <TableRow>
                                <TextView
                                    android:id="@+id/a3"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="8dp"
                                    android:text="@string/valor_cardapio_a3"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                                <TextView
                                    android:id="@+id/j3"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="16dp"
                                    android:text="@string/valor_cardapio_j3"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                            </TableRow>

                            <TableRow>
                                <TextView
                                    android:id="@+id/a4"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="8dp"
                                    android:text="@string/valor_cardapio_a4"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                                <TextView
                                    android:id="@+id/j4"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="16dp"
                                    android:text="@string/valor_cardapio_j4"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                            </TableRow>

                            <TableRow>
                                <TextView
                                    android:id="@+id/a5"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="8dp"
                                    android:text="@string/valor_cardapio_a5"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                                <TextView
                                    android:id="@+id/j5"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="16dp"
                                    android:text="@string/valor_cardapio_j5"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                            </TableRow>

                            <TableRow>
                                <TextView
                                    android:id="@+id/a6"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="8dp"
                                    android:text="@string/valor_cardapio_a6"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                                <TextView
                                    android:id="@+id/j6"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:layout_marginRight="16dp"
                                    android:text="@string/valor_cardapio_j6"
                                    android:padding="3dip"
                                    android:textAppearance="@android:style/TextAppearance.Holo.Small"/>
                            </TableRow>

                        </TableLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>